feat(simple-ide): 支持 IDEA MCP 后端随机端口注入与运行状态打通